[package]
name = "hbs-lms"
version = "0.1.1"
rust-version = "1.57"
authors = ["Fraunhofer AISEC", "Yongjin Huang"]
description = """
Pure Rust implementation of the Leighton Micali Signature scheme with support for key generation, signature generation and verification, 
including signature verification Plonky2 circuit. 
"""
edition = "2021"
repository = "https://github.com/okx/plonky2-lms"
license = "Apache-2.0"
readme = "README.md"
keywords = ["crypto", "post-quantum", "signature", "lms", "plonky2"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { version = "0.2.0" }
tinyvec = { version = "1.5.1", features = ["rustc_1_55"] }
subtle = { version = "2.4.1", default-features = false }
zeroize = { version = "1.5.1", default-features = false, features = [
    "zeroize_derive",
] }
signature = { version = "1.4.0", default-features = false }
digest = { version = "0.10.2", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
crossbeam = { version = "0.8", optional = true }
rand = { version = "0.8.3" }
itertools = { version = "0.13.0", default-features = false }


[dev-dependencies]
clap = "3.0.0"
tempfile = "3.2.0"
hex = "0.4.3"
criterion = "0.4.0"

[features]
default = ["std"]
std = []
fast_verify = ["std", "crossbeam"]
verbose = []

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[[bench]]
name = "signature"
harness = false
